# fks_execution

./: .gitmodules  Cargo.toml  Dockerfile  Dockerfile.minimal  OPENALGO_SETUP.md  README.md  app.py  app_ccxt.py  app_ccxt_simple.py  app_main.py  debug-start.sh  docker-compose.yml  entrypoint-wrapper.sh  metrics.py  requirements.txt  run.sh
.github/staging/: fks_execution-ci.yml
.github/workflows/: ci.yml  docker-build-push.yml  fks_execution-ci.yml  tests.yml
.github/workflows.backup.20251119_001135/: docker-build-push.yml
docker/: Dockerfile  entrypoint.sh
docs/: EXECUTION_REVIEW.md  PLUGINS.md
exchanges/: __init__.py  ccxt_plugin.py  manager.py
k8s/: health-checks.yaml
security/: __init__.py  middleware.py
src/: health.rs  main.rs
src/plugins/: bybit.rs  ccxt.rs  kucoin.rs  mock.rs  mod.rs  openalgo.rs  registry.rs
tests/: webhook_integration_test.rs
validation/: __init__.py  normalizer.py
webhooks/: __init__.py  tradingview.py
