[package]
name = "fks_execution"
version = "0.1.0"
edition = "2021"
description = "Fast execution & signal simulation API built on node network."

[[bin]]
name = "fks_execution"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.46", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
anyhow = "1.0.99"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
rayon = "1.11.0"
chrono = { version = "0.4.41", features = ["serde"] }
reqwest = { version = "0.12.23", features = ["json"] }
axum = { version = "0.8.4", features = ["json"] }
hyper = { version = "1.7.0", features = ["full"] }
tower = "0.5.2"
async-trait = "0.1"
uuid = { version = "1.11", features = ["v4", "serde"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
serde_qs = "0.12"
base64 = "0.22"

# Prometheus metrics
axum-prometheus = "0.5.1"
prometheus = "0.13.3"

